# UPSY-models

./: .gitignore  README.md  compile_LADDIE.csh  compile_UFEMISM.csh  compile_UPSY.csh  config_default.cfg  environment-ci.yml  environment.yml  pyproject.toml  upsy_compile_env.yml  upsy_plot_env.yml
src/UFEMISM/: CMakeLists.txt
src/UFEMISM/ISMIP7_forcing/: ISMIP7_SMB.f90  ISMIP7_climate.f90  ISMIP7_climate_model_type.f90  ISMIP7_forcing_field_types.f90
src/UFEMISM/basal_hydrology/: basal_hydrology_main.f90  basal_hydrology_new.f90
src/UFEMISM/basal_mass_balance/: BMB_idealised.f90  BMB_inverted.f90  BMB_laddie.f90  BMB_main.f90  BMB_parameterised.f90  BMB_prescribed.f90
src/UFEMISM/bed_roughness/: bed_roughness_main.f90
src/UFEMISM/bed_roughness/nudging/: bed_roughness_nudging_H_dHdt_flowline.f90  bed_roughness_nudging_H_dHdt_local.f90  bed_roughness_nudging_H_u_flowline.f90  bed_roughness_nudging_main.f90  nudging_utilities.f90
src/UFEMISM/calving/: calving_model.f90  calving_position_law.f90
src/UFEMISM/calving/calving_basics/: calving_model_allocate.f90  calving_model_basic.f90  calving_model_common.f90  calving_model_data.f90  calving_model_initialise.f90  calving_model_remap.f90  calving_model_run.f90
src/UFEMISM/climate/: climate_ISMIP7.f90  climate_idealised.f90  climate_main.f90  climate_matrix.f90  climate_model_utilities.f90  climate_realistic.f90  climate_snapshot_plus_anomalies.f90
src/UFEMISM/climate/climate_basic/: climate_model_allocate.f90  climate_model_basic.f90  climate_model_common.f90  climate_model_data.f90  climate_model_initialise.f90  climate_model_remap.f90  climate_model_run.f90
src/UFEMISM/glacial_isostatic_adjustment/: GIA_ELRA.f90  GIA_main.f90
src/UFEMISM/global_forcings/: global_forcings_main.f90
src/UFEMISM/ice_dynamics/: ice_dynamics_main.f90
src/UFEMISM/ice_dynamics/conservation_of_mass/: conservation_of_mass_explicit.f90  conservation_of_mass_main.f90  conservation_of_mass_semiimplicit.f90  conservation_of_mass_utilities.f90  vertical_velocities.f90
src/UFEMISM/ice_dynamics/conservation_of_momentum/: conservation_of_momentum_main.f90  sliding_laws.f90
src/UFEMISM/ice_dynamics/ice_geometry/: absolute_surface_slope.f90  determine_masks_mod.f90  effective_ice_thickness.f90  height_of_water_column.f90  ice_base_elevation.f90  ice_base_slopes.f90  ice_geometry_OLD.f90  ice_geometry_model_basic.f90  ice_geometry_model_data.f90  ice_masks.f90  ice_thickness_above_floatation.f90  subgrid_grounded_fractions_main.f90  surface_elevation.f90
src/UFEMISM/ice_dynamics/rheology/: constitutive_equation.f90
src/UFEMISM/ice_dynamics/time_stepping/: ice_geometry.f90  predictor_corrector_scheme.f90
src/UFEMISM/ice_dynamics/utilities/: bedrock_cumulative_density_functions.f90  calving.f90  ice_geometry.f90  ice_mass_and_fluxes.f90  ice_mass_and_fluxes_ROI.f90  ice_model_memory.f90  ice_retreat_masks.f90  ice_shelf_base_slopes.f90  ice_thickness_safeties.f90  inversion_utilities.f90  kill_icebergs.f90  masks_mod.f90  subgrid_ice_margin.f90  (+3 more)
src/UFEMISM/lateral_mass_balance/: LMB_GlacialIndex.f90  LMB_inverted.f90  LMB_main.f90
src/UFEMISM/main/: UFEMISM_main_model.f90  UFEMISM_program.f90  UFEMISM_unit_test_program.f90
src/UFEMISM/mesh_creation/: graph_pair_creation.f90  mesh_creation_from_reduced_geometry.f90  mesh_creation_main.f90  mesh_creation_refine_in_ROIs.f90
src/UFEMISM/ocean/: ocean_ISMIP7.f90  ocean_extrapolation.f90  ocean_idealised.f90  ocean_ismip.f90  ocean_main.f90  ocean_snapshot_nudge2D.f90  ocean_snapshot_nudge2D_plus_anomalies.f90  ocean_snapshot_plus_anomalies.f90  ocean_utilities.f90
src/UFEMISM/reference_geometries/: idealised_geometries.f90  reference_geometries_main.f90
src/UFEMISM/surface_mass_balance/: SMB_IMAU_ITM.f90  SMB_ISMIP7.f90  SMB_basic.f90  SMB_basic_submod_allocate.f90  SMB_basic_submod_initialise.f90  SMB_basic_submod_remap.f90  SMB_basic_submod_run.f90  SMB_idealised.f90  SMB_main.f90  SMB_model.f90  SMB_prescribed.f90  SMB_reconstructed.f90  SMB_snapshot_plus_anomalies.f90
src/UFEMISM/thermodynamics/: geothermal_heat_flux.f90  thermodynamics_3D_heat_equation.f90  thermodynamics_main.f90  thermodynamics_utilities.f90
src/UFEMISM/tracer_tracking/: tracer_tracking_particles_main.f90
src/UFEMISM/transects/: remapping_transects.f90  transects_main.f90
src/UFEMISM/types/: BMB_model_types.f90  basal_hydrology_model_types.f90  climate_model_types.f90  ice_model_types.f90  ismip_output_types.f90  ocean_model_types.f90  region_types.f90  scalar_types.f90  transect_types.f90
src/UPSY/: CMakeLists.txt  UPSY_component_test_program.f90  UPSY_component_test_program_PETSc_matrix_solving.f90  UPSY_component_test_program_mesh_creation.f90  UPSY_component_test_program_mesh_discretisation.f90  UPSY_component_test_program_mesh_focussing.f90  UPSY_component_test_program_mesh_remapping_mesh_grid.f90  UPSY_component_test_program_mesh_remapping_mesh_mesh.f90  UPSY_multinode_unit_test_program.f90  UPSY_unit_test_program.f90
src/UPSY/basic/: basic_model_utilities.f90  calendar.f90  checksum_mod.f90  git_commit_hash_and_package_versions.f90  grid_lonlat_basic.f90  parameters.f90  parameters.mod  petsc_basic.f90  precisions.mod  reallocate_mod.mod  string_module.f90
src/UPSY/fields/: fields_basic_submod_reallocate.f90  fields_basic_submod_remap.f90  fields_registry_submod_create_field.f90
src/UPSY/main/: UPSY.f90  UPSY_main.f90
src/UPSY/mesh/: mesh_ROI_polygons.f90  mesh_memory.f90  mesh_parallelisation.f90  mesh_repartitioning.f90  mesh_secondary.f90  mesh_zeta.f90
src/UPSY/models/: models_basic.f90  models_basic_submod_allocate.f90  models_basic_submod_eq.f90  models_basic_submod_restart_file.f90  models_basic_submod_set_get.f90  models_demo.f90  models_demo_submod_allocate.f90  models_demo_submod_create.f90  models_demo_submod_init.f90  models_demo_submod_initialise.f90  models_demo_submod_remap.f90  models_demo_submod_run.f90
src/UPSY/types/: graph_types.f90  mesh_types.f90  parallel_array_info_type.f90  remapping_types.f90
(+3929 files in other folders)
